# dalapy

./: .coveragerc  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
example_project/: __init__.py  config_loader.py  data_api.py  models.py  product.py  repositories.py  user.py  yaml_loader.py
momu/: __init__.py  data_api.py  models.py  repositories.py  yaml_loader.py
momu/test/data/: config.yml  manifest-module-groups.yml
src/dalapy/: __init__.py  collection.py  env.py  has_id.py  product.py  repo.py  spec.py  store.py  user.py
tests/: test_config_loader.py  test_extensive_data.py  test_product_repo.py  test_repo.py  test_system_loader.py  test_yaml_loader.py
tests/data/: config.yml  products.yaml  system.yml  users.yaml
